# crypto-ops-monitor

./: .coverage  .gitignore  LICENSE  README.md  ROADMAP.md  START_HERE_CLAUDE.md  pyproject.toml  sprint28-baseline.txt  sprint28-flow-boundary.txt  sprint29-baseline.txt  sprint29-route-diagnosis.txt
.claude/: settings.json
.github/workflows/: ci.yml
api/: main.py
crypto_ops_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/crypto_assets/: audit.py  bootstrap.py  db.py  security.py
services/crypto_assets/api/: balance_routes.py  comment_export_routes.py  counterparty_routes.py  operational_routes.py  routes.py
services/crypto_assets/config/: rpc_settings.py
services/crypto_assets/connectors/: blockchain_base.py  exchange_base.py  mock_binance.py  mock_bitcoin.py  mock_bsc.py  mock_ethereum.py  mock_kraken.py  mock_overstake.py  mock_polygon.py  real_rpc_base.py  staking_base.py
services/crypto_assets/models/: __init__.py  comments.py  entities.py  enums.py  fiat.py  folders.py
services/crypto_assets/repositories/: approval_repository.py  balance_repository.py  comment_repository.py  counterparty_repository.py  counterparty_wallet_link_repository.py  folder_repository.py  ingestion_repository.py  transaction_repository.py  wallet_repository.py
services/crypto_assets/schemas/: balances.py  comments.py  common.py  counterparties.py  folders.py  ingestion.py  transactions.py  wallets.py
services/crypto_assets/service/: balance_service.py  classification_service.py  comment_service.py  counterparty_service.py  csv_import_service.py  export_service.py  fiat_service.py  frozen_report_service.py  ingestion_service.py  multi_source_balance_service.py  rbac.py  reconciliation_service.py  refresh_orchestrator.py  source_registry.py  transaction_service.py  travel_rule_service.py  wallet_service.py  xero_service.py
services/crypto_assets/tests/: _test_sprint27_folders_rbac.py  conftest.py  test_api_comments_export.py  test_api_counterparties.py  (+19 more)
tests/: test_health.py
