[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ops-monitor"
version = "0.1.0"
description = "BANXE Crypto Assets Monitoring Foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0"
]

[tool.setuptools]
packages = ["api", "banxe_mcp", "services"]

[tool.setuptools.package-dir]
api = "api"
banxe_mcp = "banxe_mcp"
services = "services"

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
python_files = ["test_*.py"]
addopts = "-q"
