[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ops-monitor"
version = "0.1.0"
description = "BANXE Crypto Assets Monitoring Foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic-settings>=2,<3"
]

[tool.setuptools]
packages = ["api", "banxe_mcp", "services"]

[tool.setuptools.package-dir]
api = "api"
banxe_mcp = "banxe_mcp"
services = "services"

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
python_files = ["test_*.py"]
addopts = "-q"

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pytest-cov>=5.0,<7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true
